--- a/Invaxion Server Emulator Installer/MainWindow.xaml
+++ b/Invaxion Server Emulator Installer/MainWindow.xaml
@@ -2,8 +2,13 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" Title="INVAXION Server Emulator Installer" Height="394" Width="508"
-    xmlns:local="clr-namespace:Invaxion_Server_Emulator_Installer" ResizeMode="CanMinimize">
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    mc:Ignorable="d"
+    Title="INVAXION Server Emulator Installer"
+    Height="394"
+    Width="508"
+    xmlns:local="clr-namespace:Invaxion_Server_Emulator_Installer" 
+    ResizeMode="CanMinimize">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -16,12 +21,16 @@
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
-        <Label Grid.Row="0" Grid.Column="0" Margin="5,12,0,0" Name="_dialogLabel" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.RowSpan="2">_Select game directory:</Label>
-        <TextBox Name="InstallPath" Height="18" TextChanged="InstallPathTextChanged" Text="C:\Program Files\INVAXION" Background="White" TextWrapping="WrapWithOverflow" Grid.ColumnSpan="2" Margin="8,45,0,0" Grid.RowSpan="1" Grid.Row="1"/>
-        <Button Grid.Column="2" Padding="8,0" Name="_showDialogButton" IsDefault="True" Click="SelectInstallFolder" Content="Browse" Grid.Row="1" Margin="8,45,8,0" Grid.RowSpan="1" Height="17.96"/>
-        <Label Grid.Row="2" Grid.Column="0" Name="_statusLabel" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="8,0,0,0">_Status:</Label>
-        <Label Grid.Row="2" Grid.Column="0" Name="_statusText" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="51,0,0,0" Grid.ColumnSpan="3" Width="407">Idle</Label>
-        <ProgressBar Name="PBar" VerticalAlignment="Top" Height="15" SmallChange="0" Grid.ColumnSpan="3" Margin="8,0,8,0" Grid.RowSpan="2">
+        <Label Grid.Row="0" Grid.Column="0" Margin="5,12,0,0" Name="DialogLabel" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.RowSpan="2">_Select game directory:</Label>
+        <TextBox Name="InstallPath" Height="18" TextChanged="InstallPathTextChanged" Text="C:\Program Files\INVAXION" Background="White" TextWrapping="WrapWithOverflow" Grid.ColumnSpan="2"
+                 Grid.Column="0" Margin="8,45,0,0" Grid.Row="1"/>
+        <Button Grid.Column="2" Padding="8,0" Name="ShowDialogButton" IsDefault="True" Click="SelectInstallFolder" Content="Browse" Grid.Row="1" Margin="8,45,8,0"
+                Height="17.96"/>
+        <Label Grid.Row="2" Grid.Column="0" Name="StatusLabel" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="5,0,0,0">_Status:</Label>
+        <Label Grid.Row="2" Grid.Column="0" Name="StatusText" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="48,0,0,0" Grid.ColumnSpan="3" Width="407">Idle</Label>
+        <ProgressBar Name="PBar" VerticalAlignment="Top" Height="15" SmallChange="0" Grid.ColumnSpan="3" Grid.Column="0"
+                     Margin="8,0,8,0"
+                     Grid.Row="0" Grid.RowSpan="2">
             <ProgressBar.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -31,7 +40,8 @@
                 </TransformGroup>
             </ProgressBar.RenderTransform>
         </ProgressBar>
-        <ScrollViewer Name="ScrollViewer" RenderTransformOrigin="0.5,0.5" Grid.Row="2" Grid.ColumnSpan="3" Margin="8,0,8,0" Width="476" Height="200" Grid.RowSpan="2" VerticalScrollBarVisibility="Visible" ScrollChanged="ScrollViewer_ScrollChanged">
+        <ScrollViewer Name="ScrollViewer" RenderTransformOrigin="0.5,0.5" Grid.Row="2" Grid.ColumnSpan="3" Grid.Column="0"
+                      Margin="8,0,8,0" Width="476" Height="200" VerticalScrollBarVisibility="Visible" ScrollChanged="ScrollViewer_ScrollChanged">
             <ScrollViewer.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -49,7 +59,7 @@
                         <TranslateTransform X="0"/>
                     </TransformGroup>
                 </Border.RenderTransform>
-                <TextBlock Name="ProgressLog" Text="" Grid.Row="2" TextWrapping="Wrap" Grid.ColumnSpan="3" Width="447"  >
+                <TextBlock Name="ProgressLog" Text="" TextWrapping="Wrap" Width="447">
                     <TextBlock.RenderTransform>
                         <TransformGroup>
                             <ScaleTransform/>
@@ -62,7 +72,8 @@
 
             </Border>
         </ScrollViewer>
-        <Button Grid.Column="2" Padding="8,0" Name="_StartInstall" IsDefault="False" Click="StartInstall" Content="Install" Grid.Row="3" Margin="8,8,8,8" Grid.RowSpan="1" Height="17.96" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
+        <Button Grid.Column="2" Padding="8,0" Name="StartInstallButton" IsDefault="False" Click="StartInstall" Content="Install" Grid.Row="2" Margin="8,8,8,8"
+                Height="17.96" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
             <Button.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
